review documentation , review create , minor fixes
